optimized paths for zero and one elements